# video-motion-detection

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  results.ipynb
docs/: report.tex
docs/results/: comparison.csv  ff.csv  threads_vs_pinning.csv
docs/sections/: implementation.tex  introduction.tex  proposed_skeleton.tex  results.tex
include/: benchmark.hpp  shared_queue.hpp  timer.hpp  utimer.hpp
include/ff/: config.hpp
include/processing/: fastflow_nodes.hpp  frame.hpp  motion_detector.h  motion_detector_buffer.hpp  motion_detector_stream.hpp
src/: DisplayImage.cpp  frame_processing.hpp  main.cpp  meter.cpp  motion_detector.h  motion_detector.hpp  motion_detector_buffer.hpp  motion_detector_stream.hpp  processing.hpp
view/: requirements.txt  results.ipynb
